fixed scrollbars to match theme

--- a/src/Resources/SASS/scrollable.module.scss
+++ b/src/Resources/SASS/scrollable.module.scss
@@ -7,7 +7,14 @@
   overflow: auto;
   height: 0;
   scrollbar-width: thin;
-  scrollbar-color: colors.$bg-dark colors.$hl-dark;
+
+  &.dark {
+    scrollbar-color: colors.$bg-dark colors.$hl-dark;
+  }
+
+  &.light {
+    scrollbar-color: colors.$bg-light colors.$hl-light;
+  }
 
   &::-webkit-scrollbar {
     width: 12px;
@@ -18,8 +25,21 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: colors.$hl-dark;
     border-radius: 20px;
-    border: 3px solid colors.$bg-dark;
+    border: 3px solid;
   }
+
+  &.dark {
+    &::-webkit-scrollbar-thumb {
+      background-color: colors.$hl-dark;
+      border-color: colors.$bg-dark;
+    }
+  }
+  &.light {
+    &::-webkit-scrollbar-thumb {
+      background-color: colors.$hl-light;
+      border-color: colors.$bg-light;
+    }
+  }
+
 }
